--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
