--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@mui/x-date-pickers": "^7.14.0",
     "@reduxjs/toolkit": "^2.2.8",
     "dayjs": "^1.11.13",
-    "next": "14.2.5",
+    "next": "^14.2.18",
     "next-auth": "^4.24.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
