--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "next": "^14.2.18",
     "next-auth": "^4.24.8",
+    "next-intl": "^3.25.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.1.2",
