--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
-    "@mui/x-date-pickers": "^7.14.0",
+    "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^2.2.8",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "next": "^14.2.18",
     "next-auth": "^4.24.8",
